Made some cosmetic changes and partial implementation of list components

--- a/Organizer.Loader/src/cards/cardList.component.css
+++ b/Organizer.Loader/src/cards/cardList.component.css
@@ -1,4 +1,4 @@
-.currency-item {
+.card-item {
     margin: 1.5em;
 }
 
@@ -6,13 +6,13 @@ md-card-content {
     display: flex;
 }
 
-md-card-content .currencyDescription {
+md-card-content .cardDescription {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.currencyDescription header {
+.cardDescription header {
     display: flex;
     justify-content: flex-end;
     color: silver;
