--- a/Organizer.Loader/src/common/globalSpinner/globalSpinner.component.css
+++ b/Organizer.Loader/src/common/globalSpinner/globalSpinner.component.css
@@ -1,4 +1,3 @@
-
 .spinner-container {
     position: absolute;
     width: 100%;
@@ -9,5 +8,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: rgba(0,0,0, 0.2);
+    background: white;
+}
+
+.spinner-message {
+    font-size: 1em;
+    color: #499188;
 }
