* Added movements edition and movements deletion * Minor bug fix in web api

--- a/Organizer.Loader/src/common/messageBox/messageBox.component.html
+++ b/Organizer.Loader/src/common/messageBox/messageBox.component.html
@@ -7,12 +7,12 @@
     <button *ngSwitchCase="buttonsEnum.Ok" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Ok)">Ok</button>
     <!--OkCancel-->
     <button *ngSwitchCase="buttonsEnum.OkCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Ok)">Ok</button>
-    <button *ngSwitchCase="buttonsEnum.OkCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Cancel)">Cancel</button>
+    <button *ngSwitchCase="buttonsEnum.OkCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Cancel)">Cancelar</button>
     <!--YesNo-->
-    <button *ngSwitchCase="buttonsEnum.YesNo" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Yes)">Yes</button>
+    <button *ngSwitchCase="buttonsEnum.YesNo" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Yes)">Si</button>
     <button *ngSwitchCase="buttonsEnum.YesNo" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.No)">No</button>
     <!--YesNoCancel-->
-    <button *ngSwitchCase="buttonsEnum.YesNoCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Yes)">Yes</button>
+    <button *ngSwitchCase="buttonsEnum.YesNoCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Yes)">Si</button>
     <button *ngSwitchCase="buttonsEnum.YesNoCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.No)">No</button>
-    <button *ngSwitchCase="buttonsEnum.YesNoCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Cancel)">Cancel</button>
+    <button *ngSwitchCase="buttonsEnum.YesNoCancel" md-raised-button (click)="onMessageBoxButtonClick(resultEnum.Cancel)">Cancelar</button>
 </md-dialog-actions>
